--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,13 @@
         android:theme="@style/Theme.ApniCare"
         tools:targetApi="31">
         <activity
+            android:name=".prescription_cam"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".AllCategoriesActivity"
             android:exported="false">
             <meta-data
@@ -77,6 +84,33 @@
         </activity>
         <activity
             android:name=".SplashScreen"
+            android:exported="true"
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+
+<!--        PRESCRIPTION-->
+        <activity
+            android:name=".Upload_Prescription.prescription_cam"
+            android:exported="true"
+            android:screenOrientation="portrait">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+
+
+
+        <activity
+            android:name=".upload_prescription"
             android:exported="true"
             android:screenOrientation="portrait">
             <intent-filter>
