--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,48 +13,44 @@
         android:roundIcon="@drawable/apni_care_logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.ApniCare"
-        tools:targetApi="31"
-        android:usesCleartextTraffic="true">
-
-
-<!--        <activity-->
-<!--            android:name=".prescription_cam"-->
-<!--            android:exported="false">-->
-<!--            <meta-data-->
-<!--                android:name="android.app.lib_name"-->
-<!--                android:value="" />-->
-<!--        </activity>-->
-
-
-<!--       ALL CATEGORY ACTIVITY -->
-
+        android:usesCleartextTraffic="true"
+        tools:targetApi="31">
+        <activity
+            android:name=".ContactUsActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <!-- <activity -->
+        <!-- android:name=".prescription_cam" -->
+        <!-- android:exported="false"> -->
+        <!-- <meta-data -->
+        <!-- android:name="android.app.lib_name" -->
+        <!-- android:value="" /> -->
+        <!-- </activity> -->
+        <!-- ALL CATEGORY ACTIVITY -->
         <activity
             android:name=".AllCategoriesActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
-        </activity>
-
-<!--        ALL PRODUCT BOOKED ACTIVITY-->
+        </activity> <!-- ALL PRODUCT BOOKED ACTIVITY -->
         <activity
             android:name=".AllProducts.OrderBookedActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
-        </activity>
-
-<!--        AllProductsActivity  -->
+        </activity> <!-- AllProductsActivity -->
         <activity
             android:name=".AllProducts.AllProductsActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
-        </activity>
-
-<!--        enter_otp_Activity-->
+        </activity> <!-- enter_otp_Activity -->
         <activity
             android:name=".enter_otp_Activity"
             android:exported="false"
@@ -62,9 +58,7 @@
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
-        </activity>
-
-<!--        LoginActivity    -->
+        </activity> <!-- LoginActivity -->
         <activity
             android:name=".LoginActivity"
             android:exported="false"
@@ -72,9 +66,7 @@
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
-        </activity>
-
-<!--        YourOrdersActivity    -->
+        </activity> <!-- YourOrdersActivity -->
         <activity
             android:name=".YourOrders.YourOrdersActivity"
             android:exported="false"
@@ -82,9 +74,7 @@
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
-        </activity>
-
-<!--        CartActivity    -->
+        </activity> <!-- CartActivity -->
         <activity
             android:name=".myCart.CartActivity"
             android:exported="false"
@@ -92,9 +82,7 @@
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
-        </activity>
-
-<!--        AddressActivity   -->
+        </activity> <!-- AddressActivity -->
         <activity
             android:name=".address_page.AddressActivity"
             android:exported="false"
@@ -102,25 +90,21 @@
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
-        </activity>
-
-
-<!--        SplashScreen    -->
+        </activity> <!-- SplashScreen -->
         <activity
             android:name=".SplashScreen"
             android:exported="true"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
-        </activity>
-
-<!--        PRESCRIPTION-->
+        </activity> <!-- PRESCRIPTION -->
         <activity
             android:name=".Upload_Prescription.prescription_cam"
             android:exported="true"
@@ -129,18 +113,17 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
-
-
         <activity
             android:name=".upload_prescription"
             android:exported="false"
             android:screenOrientation="portrait">
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
 
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
 
             <meta-data
                 android:name="android.app.lib_name"
