--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,12 @@ dependencies {
 // Stashed changes
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+
+    implementation("com.squareup.okhttp3:logging-interceptor:4.10.0")
+    dependencies {
+        implementation 'com.github.bumptech.glide:glide:4.12.0'
+        // Glide v4 uses this new annotation processor -- see https://bumptech.github.io/glide/doc/generatedapi.html
+        annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    }
 }
