--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,12 @@
         android:theme="@style/Theme.ApniCare"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity android:name=".Upload_Prescription.sprescription"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".SearchActivity"
             android:exported="false">
