--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.5.3'
     implementation 'androidx.navigation:navigation-ui:2.5.3'
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
+    implementation 'com.airbnb.android:lottie:5.2.0'
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
     implementation 'com.github.denzcoskun:ImageSlideshow:0.1.0' // SLIDER DEPENDENCY
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
