added Alan AI Bot

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,7 +51,10 @@ dependencies {
 // Stashed changes
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-
+    dependencies {
+        /// Add Alan SDK dependency
+        implementation "app.alan:sdk:4.20.7"
+    }
 
     implementation("com.squareup.okhttp3:logging-interceptor:4.10.0")
     dependencies {
