--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,5 +59,6 @@ dependencies {
         implementation 'com.github.bumptech.glide:glide:4.12.0'
         // Glide v4 uses this new annotation processor -- see https://bumptech.github.io/glide/doc/generatedapi.html
         annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+        implementation 'com.basgeekball:awesome-validation:4.3' // for the form Validation
     }
 }
